--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -11,10 +11,10 @@
                 <!-- LAYERS -->
 
                 <!-- LAYER NR. 1 -->
-                <div class="tp-caption tp-resizeme Gym-Display top-slider-title" 
+                <div class="tp-caption tp-resizeme top-slider-title" 
                    id="slide-44-layer-1" 
                    data-x="['left','left','left','left']" data-hoffset="['0','0','0','0']" 
-                   data-y="['middle','middle','middle','middle']" data-voffset="['-92','-92','-92','-142']" 
+                   data-y="['middle','middle','middle','middle']" data-voffset="['-122','-122','-122','-172']" 
                         data-fontsize="['80','80','80','60']"
                   data-width="none"
                   data-height="none"
@@ -31,7 +31,7 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 5; white-space: nowrap;">Professional 
+                  style="z-index: 5; white-space: nowrap; line-height: 80px; color: #fff;     text-shadow: 0px 1px 3px rgba(0,0,0,0.2);">Professional 
                 </div>
 
 
@@ -39,7 +39,7 @@
                 <div class="tp-caption tp-resizeme" 
                    id="slide-44-layer-3" 
                    data-x="['left','left','left','left']" data-hoffset="['0','0','0','0']" 
-                   data-y="['middle','middle','middle','middle']" data-voffset="['-20','-20','-20','-22']" 
+                   data-y="['middle','middle','middle','middle']" data-voffset="['-50','-50','-50','-52']" 
                         data-fontsize="['80','80','80','60']"
                   data-width="none"
                   data-height="none"
@@ -56,7 +56,7 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 7; white-space: nowrap;">Hygiene Solutions
+                  style="z-index: 7; white-space: nowrap;line-height: 80px; color: #fff;    text-shadow: 0px 1px 3px rgba(0,0,0,0.2);">Hygiene Solutions
                 </div>
 
                 <!-- LAYER NR. 4 -->
@@ -64,12 +64,12 @@
                    id="slide-44-layer-4" 
                    data-x="['left','left','left','left']" data-hoffset="['0','0','0','0']" 
                    data-y="['middle','middle','middle','middle']" data-voffset="['71','71','71','51']" 
-                        data-fontsize="['30','30','30','15']"
+                        data-fontsize="['26','26','26','15']"
                   data-lineheight="['30','30','30','20']"
                   data-fontweight="['100','100','100','400']"
-                  data-width="none"
+                  data-width="500"
                   data-height="none"
-                  data-whitespace="nowrap"
+                  data-whitespace="normal"
                   data-transform_idle="o:1;"
              
                    data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
@@ -82,14 +82,14 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 8; white-space: nowrap;">Creating hierarchy within typography is key for emphasizing the most important messages. 
+                  style="z-index: 8; white-space: normal; font-size: 26px;">Creating hierarchy within typography is key for emphasizing the most important messages. 
                 </div>
 
               </li>
               <!-- SLIDE  -->
-              <li data-index="rs-18" data-transition="zoomin" data-slotamount="7"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="../../assets/images/slider-1.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Ken Burns" data-description="">
+              <li data-index="rs-18" data-transition="zoomin" data-slotamount="7"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="../../assets/images/slider-2.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Ken Burns" data-description="">
                 <!-- MAIN IMAGE -->
-                <img src="../../assets/images/slider-1.jpg"  alt=""  data-bgposition="center center" data-kenburns="on" data-duration="30000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                <img src="../../assets/images/slider-2.jpg"  alt=""  data-bgposition="center center" data-kenburns="on" data-duration="30000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                 <!-- LAYERS -->
 
                 <!-- LAYER NR. 1 -->
@@ -136,7 +136,7 @@
 
                   data-elementdelay="0.05" 
                   
-                  style="z-index: 6; white-space: nowrap;">KEN BURNS 
+                  style="z-index: 6; white-space: nowrap;">Блок с ссылками 
                 </div>
 
                 <!-- LAYER NR. 3 -->
@@ -159,49 +159,15 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 7; white-space: nowrap;">IN A SMOOTH WAY 
+                  style="z-index: 7; white-space: nowrap;">ЧОТКИМИ 
                 </div>
               </li>
               <!-- SLIDE  -->
-              <li data-index="rs-19" data-transition="zoomout" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="../../assets/images/fitness-100x50.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="HTML5 Video" data-description="">
+              <li data-index="rs-19" data-transition="zoomout" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="../../assets/images/slider-3.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="HTML5 Video" data-description="">
                 <!-- MAIN IMAGE -->
-                <img src="../../assets/images/slider-1.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                <img src="../../assets/images/slider-3.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                 <!-- LAYERS -->
 
-                <!-- BACKGROUND VIDEO LAYER -->
-                <div class="rs-background-video-layer" 
-                  data-forcerewind="on" 
-                  data-volume="mute" 
-                  data-videowidth="100%" 
-                  data-videoheight="100%" 
-                  data-videomp4="../../assets/videos/fit_edit.mp4" 
-                  data-videopreload="preload" 
-                  data-videoloop="none" 
-                  data-forceCover="1" 
-                  data-aspectratio="16:9" 
-                  data-autoplay="true" 
-                  data-autoplayonlyfirsttime="false" 
-                  data-nextslideatend="true" 
-                ></div>
-                <!-- LAYER NR. 1 -->
-                <div class="tp-caption tp-shape tp-shapewrapper   rs-parallaxlevel-0" 
-                   id="slide-19-layer-10" 
-                   data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
-                   data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']" 
-                        data-width="full"
-                  data-height="full"
-                  data-whitespace="nowrap"
-                  data-transform_idle="o:1;"
-             
-                   data-transform_in="opacity:0;s:2000;e:Power3.easeInOut;" 
-                   data-transform_out="opacity:0;s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
-                  data-start="2000" 
-                  data-basealign="slide" 
-                  data-responsive_offset="on" 
-                  data-responsive="off"
-                  
-                  style="z-index: 5;background-color:rgba(0, 0, 0, 0.25);border-color:rgba(0, 0, 0, 0);"> 
-                </div>
 
                 <!-- LAYER NR. 2 -->
                 <div class="tp-caption NotGeneric-Title   tp-resizeme rs-parallaxlevel-0" 
@@ -225,7 +191,7 @@
 
                   data-elementdelay="0.05" 
                   
-                  style="z-index: 6; white-space: nowrap;">HTML5 VIDEO 
+                  style="z-index: 6; white-space: nowrap;">ПУСТО 
                 </div>
 
                 <!-- LAYER NR. 3 -->
@@ -248,7 +214,7 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 7; white-space: nowrap;">AND LOTS OF OTHER MEDIA 
+                  style="z-index: 7; white-space: nowrap;">и стремно 
                 </div>
 
                 <!-- LAYER NR. 4 -->
@@ -276,9 +242,9 @@
                 </div>
               </li>
               <!-- SLIDE  -->
-              <li data-index="rs-20" data-transition="zoomin" data-slotamount="7"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="../../assets/images/lambo-100x50.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Love it?" data-description="">
+              <li data-index="rs-20" data-transition="zoomin" data-slotamount="7"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="../../assets/images/slider-2.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Love it?" data-description="">
                 <!-- MAIN IMAGE -->
-                <img src="../../assets/images/lambo.jpg"  alt=""  data-bgposition="center center" data-kenburns="on" data-duration="10000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 -500" data-offsetend="0 500" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                <img src="../../assets/images/slider-2.jpg"  alt=""  data-bgposition="center center" data-kenburns="on" data-duration="10000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 -500" data-offsetend="0 500" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                 <!-- LAYERS -->
 
                 <!-- LAYER NR. 1 -->
@@ -304,7 +270,7 @@
 
                   data-elementdelay="0.1" 
                   
-                  style="z-index: 5; white-space: nowrap;">LOVE IT? 
+                  style="z-index: 5; white-space: nowrap;">Картинка увеличивается 
                 </div>
 
                 <!-- LAYER NR. 2 -->
@@ -327,7 +293,7 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 6; white-space: nowrap;">GET SLIDER REVOLUTION TODAY 
+                  style="z-index: 6; white-space: nowrap;">ненавязчиво и круто 
                 </div>
 
                 <!-- LAYER NR. 3 -->
@@ -475,17 +441,94 @@
         </ul>
 </article>
   <article>
-    <div class="container-fluid">
+    <div class="container-fluid container-grey">
     <div class="container">
+      <div class="heading heading-top"><div class="title title-dark">news</div></div>
       <div class="row">
-        <div class="col-md-6">.col-md-6</div>
+        <div class="col-md-3">
+          <div class="news-item news-main">
+            <div class="date">01 апреля 2016</div>
+            <div class="title">Новая упаковка и программа Safe Packing</div>
+            <div class="body">All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! So clean and easy to navigate, great job!</div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="news-item news-main">
+            <div class="date">01 апреля 2016</div>
+            <div class="title">Meragel Septospray</div>
+            <div class="body">All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! </div>
+            <div class="link">Watch product</div>
+          </div>
+        </div>
         <div class="col-md-6">.col-md-6</div>
       </div>
     </div>
     </div>
   </article>
+  <article>
+    <div class="container-fluid container-white">
+    <div class="container container-offset-bottom">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="heading heading-top"><div class="title">press <span>center</span></div></div>
+          <div class="subarticle">
+            <div class="title">Press releases sweet and seductive</div>
+            <div class="body">All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! So clean and easy to navigate, great job!</div>
+            <div class="link">Watch the video</div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="heading heading-top"><div class="title">documentation</div></div>
+          <div class="subarticle">
+            <div class="title">Enchance your damn canister of chemshit as hell</div>
+            <div class="body">All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! So clean and easy to navigate, great job!</div>
+            <div class="button">Find product</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </article>
+  <article class="equipment-main">
+    <div class="container-fluid">
+    <div class="container container-after-offset">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="heading heading-top"><div class="title">professional <span>equipment</span></div></div>
+          <div class="article">
+            <div class="title">How performance looks like</div>
+            <div class="body">All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! </div>
+            <div class="button">Find product</div>
+            <ul class="equipment-list">
+              <li class="cleaning">
+                <span>Системы мойки низкого и высокого давления</span>
+                <div></div>
+              </li>
+              <li class="lubrication">
+                <span>Системы конвейерных смазок</span>
+                <div></div>
+              </li>
+              <li class="soap">
+                <span>Дозаторы для мыла</span>
+                <div></div>
+              </li>
+              <li class="co2">
+                <span>Установки CO<sub>2</sub></span>
+                <div></div>
+              </li>
+              <li class="dosation">
+                <span>Системы дозации</span>
+                <div></div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </article>
 
-<article style="width: 100%; height: 900px;">
+<article>
         <div id="rev_slider_68_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" style="width: 100%; height: 900px;">
           <!-- START REVOLUTION SLIDER 5.0.7 fullwidth mode -->
           <div id="rev_slider_68_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.0.7">
@@ -569,7 +612,7 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 11; white-space: nowrap;">Hygiene <span>solutions</span> 
+                  style="z-index: 11; white-space: nowrap;">hygiene <span>solutions</span> 
                 </div>
 
                 <div class="tp-caption title-main title-white tp-resizeme rs-parallaxlevel-0" 
@@ -687,5 +730,72 @@
           }); /*ready*/
         </script> 
   </article>
+  <article class="video-block">
+    <div class="container-fluid container-white">
+      <div class="container container-offset-top">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="article video-about">
+              <div class="title">You need to know about us</div>
+              <div class="body">The Uber brand is more than a name. It’s a set of values, attributes, and artwork that reflects the spirit of our company.  </div>
+              <div class="video"><div class="button">more about <span>meratech</span></div></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </article>
 
-  <footer></footer>
+  <footer>
+    <div class="container-fluid container-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <a class="logo" href="/">{{logo-meratech}}</a>
+            <ul class="terms">
+              <li class="link">Privacy Policy</li>
+              <li class="link">Terms of Use</li>
+            </ul>
+            <ul class="social">
+              <li class="fa fa-facebook">Facebook</li>
+              <li class="fa fa-linkedin-square">Linked In</li>
+              <li class="fa fa-skype">Skype</li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <div class="address">
+              19 Delovaya st., Nizhny Novgorod<br>
+              603093 Russia<br>
+              LCC Meratech Rus Group
+            </div>
+            <div class="phone">
+              8 (800) 333-58-88
+            </div>
+            <div class="email">
+              info@meratech.ru
+            </div>
+          </div>
+          <div class="col-md-2">
+            <ul>
+              <li>Мир <span>meratech</span></li>
+              <li>Пресс-центр</li>
+              <li>Сегменты бизнеса</li>
+              <li>Гигиенические средства</li>
+              <li>Оборудование</li>
+              <li>Проекты</li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <div class="title">Профессиональные гигиенические решения</div>
+            <div class="body">На протяжении долгого времени мы разрабатываем и производим самые современные моющие и дезинфицирующие средства для предприятий сельского хозяйства, мясоптицеперерабатывающих и молочных заводов, а также предприятий пивобезалкогольной промышленности. </div>
+            <div class="link login"><div class="fa fa-user"></div>Login</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="copyright">Copyright © 2006-2015 meratech. All Rights Reserved. All other  trademarks are the property of their respective owners and are used with their permission. </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
