--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -104,7 +104,7 @@ a:hover {
 html {
   position: relative;
   min-height: 100%;
-  font-size: 0.85em;
+  font-size: 0.8em;
   letter-spacing: -0.015em;
   background-color: #ffffff;
 }
@@ -134,13 +134,13 @@ a, a:hover, a:focus, a:active{
 
 
 
-
-.container-fluid{
-    margin: 0px 65px 0px 65px;
-}
-@media (max-width: 1400px){
+header{
   .container-fluid{
-    margin: 0px;
+      margin: 0px 65px 0px 65px;
+  }
+  @media (max-width: 1400px){
+    .container-fluid{
+      margin: 0px;
+    }
   }
 }
-
