--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,57 @@
+  <header class="header">
+        {{main-navigation}}</header>
 {{outlet}}
+
+  <footer>
+    <div class="container-fluid container-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <a class="logo" href="/">{{logo-meratech}}</a>
+            <ul class="terms">
+              <li class="link">Privacy Policy</li>
+              <li class="link">Terms of Use</li>
+            </ul>
+            <ul class="social">
+              <li class="fa fa-facebook">Facebook</li>
+              <li class="fa fa-linkedin-square">Linked In</li>
+              <li class="fa fa-skype">Skype</li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <div class="address">
+              19 Delovaya st., Nizhny Novgorod<br>
+              603093 Russia<br>
+              LCC Meratech Rus Group
+            </div>
+            <div class="phone">
+              8 (800) 333-58-88
+            </div>
+            <div class="email">
+              info@meratech.ru
+            </div>
+          </div>
+          <div class="col-md-2">
+            <ul>
+              <li>Мир <span>meratech</span></li>
+              <li>Пресс-центр</li>
+              <li>Сегменты бизнеса</li>
+              <li>Гигиенические средства</li>
+              <li>Оборудование</li>
+              <li>Проекты</li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <div class="title">Профессиональные гигиенические решения</div>
+            <div class="body">На протяжении долгого времени мы разрабатываем и производим самые современные моющие и дезинфицирующие средства для предприятий сельского хозяйства, мясоптицеперерабатывающих и молочных заводов, а также предприятий пивобезалкогольной промышленности. </div>
+            <div class="link login"><div class="fa fa-user"></div>Login</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="copyright">Copyright © 2006-2015 meratech. All Rights Reserved. All other  trademarks are the property of their respective owners and are used with their permission. </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
