--- a/app/templates/press_center.hbs
+++ b/app/templates/press_center.hbs
@@ -1,16 +1,22 @@
-<section class="news-header">
-	<div class="page-title">Press Center</div>
-	<div class="body controls">
-		<div class="select">looking for
-			<select>
-				<option>events</option>
-				<option>products</option>
-				<option>clients</option>
-				<option>company</option>
-			</select>
+<article class="news-header">
+  <div class="container-fluid">
+    <div class="container">
+			<div class="page-title">Press Center</div>
+			<div class="body controls">
+				<div class="select-wrapper">looking for
+					<div class="select">
+						<ul>
+							<li>events</li>
+							<li>products</li>
+							<li>clients</li>
+							<li>company</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-</section>
+</article>
 <article>
 	<div class="container">
     <div class="row">
