--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -4,3 +4,4 @@ $mainColorLighter: #e52625;
 $blackColor: #3b3d3f;
 $assetsImage: "images/assets.png";
 $introImage: "images/intro.png";
+$assetsImageSize: 960px 1200px;
