--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -470,7 +470,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="heading heading-top"><div class="title">press <span>center</span></div></div>
-          <div class="subarticle">
+          <div class="subarticle subarticle-short">
             <div class="title">Press releases sweet and seductive</div>
             <div class="body">All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! So clean and easy to navigate, great job!</div>
             <div class="link">Watch the video</div>
@@ -478,10 +478,10 @@
         </div>
         <div class="col-md-6">
           <div class="heading heading-top"><div class="title">documentation</div></div>
-          <div class="subarticle">
+          <div class="subarticle subarticle-short">
             <div class="title">Enchance your damn canister of chemshit as hell</div>
             <div class="body">All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! So clean and easy to navigate, great job!</div>
-            <div class="button">Find product</div>
+            <div class="button button-red">Find product</div>
           </div>
         </div>
       </div>
@@ -497,7 +497,7 @@
           <div class="article">
             <div class="title">How performance looks like</div>
             <div class="body">All your dashboards are amazing! So clean and easy to navigate, great job! All your dashboards are amazing! </div>
-            <div class="button">Find product</div>
+            <div class="button button-red">Find product</div>
             <ul class="equipment-list">
               <li class="cleaning">
                 <span>Системы мойки низкого и высокого давления</span>
@@ -677,7 +677,7 @@
                   data-responsive="off"
                   
                   style="z-index: 14; white-space: nowrap;">
-                  <div class="button-default button-red">Каталог</div><div class="button-default button-download">Скачать каталог</div>
+                  <div class="button button-red">Каталог</div><div class="button button-transparent button button-download">Скачать каталог</div>
                 </div>
               </li>
             </ul>
