--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,6 +5,8 @@
 @import 'search-component';
 @import 'components';
 @import 'typography';
+@import 'buttons';
+@import 'catalog';
 
 /* RESET */
 html,body,div,ul,li,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,fieldset,input, menu, section, button { margin: 0; padding: 0; }
