--- a/app/styles/components.scss
+++ b/app/styles/components.scss
@@ -1,30 +1,5 @@
-.button-default{
-  float: left;
-  display: block;
-  height: 40px;
-  width: 165px;
-  padding-top: 10px;
-  font-size: 1.2em;
-  font-family: "etelka-text";
-  box-sizing: border-box;
-  text-align: center; 
-  cursor: pointer; 
-}
-.button-red{
-  background-color: $mainColorLighter;
-  color: #ffffff;
-  &:hover{
-  background-color: $mainColor;
-  }
-}
 
-.container-grey{
-  background-color: #f7f7f7;
-}
 
-.container-dark{
-  background-color: #3e3e43;
-}
 .container{
   padding-bottom: 55px;
 }
@@ -33,6 +8,7 @@
   margin-left: auto;
   padding-left: 0px;
   padding-right: 0px;
+  overflow-x: hidden;
 }
 @media (min-width: 768px) {
   .container {
@@ -84,14 +60,22 @@
       font-family: "etelka-text";
       margin-right: 14px;
       font-weight: 900;
+      position: relative;
+      top: 2px;
     }
   }
   .title.title-dark{
     background-color: rgba(21, 18, 28, 0.73);
     color: #ffffff;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 18px;
+    padding-right: 20px;
     height: 50px;
+    line-height: 48px;
+    font-size: 24px;
+  }
+  .title.title-offset-top{
+    position: relative;
+    top: -50px;
   }
 }
 .container-offset-bottom{
@@ -111,6 +95,12 @@
 }
 .container-white{
   background-color: rgba(255,255,255,1);
+}
+.container-grey{
+  background-color: #f7f7f7;
+}
+.container-dark{
+  background-color: #3e3e43;
 }
 
 .news-item{
@@ -132,23 +122,6 @@
     padding-left: 15px;
     margin-top: 10px;
   }
-  .link{
-    font-family: 'etelka-narrow-text';
-    font-size: 12px;
-    margin-top: 10px;
-    text-transform: uppercase;
-    font-weight: 900;
-    &:before{
-      font-family: 'FontAwesome';
-      content: '\f01b';
-      transform: rotate(45deg);
-      margin-right: 8px;
-      font-size: 14px;
-      display: inline-block;
-      position: relative;
-      top: 1px;
-    }
-  }
 }
 .subarticle{
   padding-bottom: 100px;
@@ -158,11 +131,9 @@
     color: #4f4d55;
     font-family: "etelka-medium";
     letter-spacing: -0.03em;
-    padding-right: 200px;
     margin-top: 10px;
   }
   .body{
-    width: 300px;
     margin-top: 30px;
   }
   .link{
@@ -181,17 +152,13 @@
       top: 1px;
     }
   }
-  .button{
-    font-family: 'etelka-text';
-    background-color: #b7151d;
-    color: #ffffff;
-    margin-top: 45px;
-    padding-left: 45px;
-    padding-right: 45px;
-    line-height: 40px;
-    font-size: 14px;
-    display: inline-block;
-    height: 40px;
+  &.subarticle-short{
+    .title{
+      padding-right: 200px;
+    }
+    .body{
+      width: 300px;
+    }
   }
 }
 .article{
@@ -404,6 +371,7 @@ footer{
   font-family: 'etelka-thin';
   .container{
     padding-top: 75px;
+    padding-bottom: 25px;
     color: rgba(255, 255, 255, 0.8);
     .terms{
       margin-top: 60px;
@@ -417,6 +385,9 @@ footer{
         transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1) all;
         &:hover{
           opacity: 0.6;
+        }
+        &:before{
+          display: none;
         }
       }
     }
@@ -442,14 +413,18 @@ footer{
         float: left;
         width: 20px;
         height: 20px;
-        margin-right: 20px;
+        margin-right: 30px;
         overflow: hidden;
         display: block;
+        cursor: pointer;
         color: rgba(255, 255, 255, 1);
         &:before{
+          display: block;
+          color: rgba(255, 255, 255, 1);
           margin-right: 200px;
           margin-left: 1px;
           line-height: 20px;
+          font-size: 1.05em;
           -webkit-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
           -moz-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
           -ms-transition: 0.175s cubic-bezier(0.175, 0.885, 0.320, 1) all;
@@ -509,6 +484,9 @@ footer{
     }
     ul li{
       margin-bottom: 13px; 
+      &:before{
+        display: none;
+      }
       span{
         color: #ff4132;
       }
@@ -534,6 +512,335 @@ footer{
       text-align: center;
       margin-left: auto;
       margin-right: auto;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+.paragraph{
+  &.padded{
+    padding-right: 60px;
+  }
+  & > .title{
+    font-family: 'etelka-text';
+    font-size: 1.45em;
+    position: relative;
+    margin-bottom: 23px;
+    padding-bottom: 23px;
+    &:after{
+      width: 50px;
+      height: 1px;
+      background-color: #f1332c;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      content: '';
+    }
+  }
+  & > .body{
+    .subtitle{     
+      font-family: 'etelka-text';
+      font-size: 1.2em;
+      opacity: 0.3;
+      margin-bottom: 15px;
+    }
+    .subbody{     
+      margin-bottom: 15px;
+    }
+    & > dl{
+      margin-bottom: 8px;
+      dt{
+        float: left;
+        width: 120px;
+        margin-bottom: 4px;
+        font-family: 'etelka-text';
+        font-size: 1.2em;
+        height: 22px;    
+        font-weight: 100;
+      }
+      dd{
+        margin-left: 120px;
+        margin-bottom: 4px;
+        min-height: 22px;
+      }
+    }
+  }
+}
+.container-dark{
+  .paragraph{
+    color: #ffffff;
+    & > .body, & > table{
+      color: #B9B9BB;
+    }
+  }
+}
+.container-catalog{
+  padding-bottom: 85px;
+  .heading{
+    margin-bottom: 40px;
+  }
+}
+.container-hero{
+  padding-bottom: 100px;
+  .heading{
+    margin-bottom: 70px;
+  }
+}
+.paragraph{
+  table{
+    td{
+      width: 50%;
+      &:last-child{
+        font-family: 'etelka-text';
+        text-align: right;
+      }
+    }
+  }
+}
+.circle{
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  border-radius: 20px;
+  position: relative;
+  top: 7px;
+  margin-left: 15px;
+  margin-right: 15px;
+  &.circle-yellow{
+    background-color: #e0d438;
+
+  }
+}
+
+
+
+
+
+
+
+
+
+ul.list{
+  list-style-type: none;
+  li{
+    margin-bottom: 12px;
+    margin-left: 20px;
+    &:before{
+      font-family: 'FontAwesome';
+      content: '\f054';
+      color: #f1332c;
+      font-size: 12px;    
+      display: block;
+      margin-left: -20px;
+      float: left;
+    }
+  }
+}
+
+table{
+  width: 100%;
+  thead{
+
+  }
+  tbody{
+    tr{
+      border-bottom: 1px solid rgba(128,128,128,0.1);
+      &:last-child{
+        border-bottom: none;
+      }
+      td{
+        line-height: 50px;
+      }
+    }
+  }
+}
+
+
+
+.package{
+  & > div{
+    background-size: $assetsImageSize;
+    background-image: url($assetsImage);
+    height: 185px;
+    float: left;
+    span{
+      margin-top: 150px;
+      text-align: center;
+      display: block;
+      font-family: 'etelka-text';
+      font-size: 1.8em;
+      color: #ffffff;
+      u{
+        font-size: 0.6em;
+        text-decoration: none;
+      }
+    }
+  }
+  .package-canister{
+    background-position: 0px -475px;
+    width: 100px;
+    margin-right: 10%;
+  }
+  .package-barrel{
+    background-position: -165px -475px;
+    width: 80px;
+    margin-right: 10%;
+  }
+  .package-cube{
+    background-position: -308px -475px;
+    width: 160px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+.safety-signs{
+  .hazard{
+    width: 110px;
+    height: 110px;
+    background-size: $assetsImageSize;
+    background-image: url($assetsImage);
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 30px;
+  }
+  .hazard-c{
+    background-position: 0px 0px;
+  }
+  .hazard-n{
+    background-position: -115px 0px;
+  }
+  .hazard-x{
+    background-position: -230px 0px;
+  }
+  .hazard-xi{
+    background-position: 0px -115px;
+  }
+  .hazard-o{
+    background-position: -115px -115px;
+  }
+  .hazard-f{
+    background-position: -230px -115px;
+  }
+  .hazard-t{
+    background-position: -345px -115px;
+  }
+  .title{
+    clear: left;
+    font-family: 'etelka-text';
+    font-size: 2em;
+    margin-bottom: 7px;
+  }
+  .body{
+    font-family: 'etelka-text';
+    font-size: 1.1em;
+    line-height: 1.3em;
+  }
+}
+.precaution-signs{
+  margin-top: 10px;
+  .precaution{
+    width: 50px;
+    height: 50px;
+    background-size: $assetsImageSize;
+    background-image: url($assetsImage);
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 30px;
+  }
+  .precaution-gloves{
+    background-position: -730px -3px;
+  }
+  .precaution-suit{
+    background-position: -789px -3px;
+  }
+  .precaution-boots{
+    background-position: -848px -3px;
+  }
+  .precaution-glasses{
+    background-position: -907px -3px;
+  }
+}
+.paragraph{
+  & > .body{
+    .precaution-signs{
+      & > .subtitle{     
+        font-family: 'etelka-text';
+        font-size: 1em;
+        opacity: 1;
+        margin-bottom: 0px;
+        color: #ffffff;
+      }
+      & > .subbody{     
+        margin-bottom: 15px;
+      }
+    }
+  }
+}
+
+.catalog-image{
+  text-align: right;
+  margin-right: 25px;
+  img{
+    width: 125px;
+    height: 175px;
+    box-shadow: 2px 2px 0px rgba(0,0,0,0.3);
+  }
+}
+
+.documents{
+  width: 100%;
+  li{
+    float: left;
+    width: 50%;
+    padding-right: 20px;
+    box-sizing: border-box;
+    cursor: pointer;
+    &:before{
+      display: block;
+      float: left;
+      width: 56px;
+      height: 79px;
+      background-size: 768px 960px;
+      background-image: url($assetsImage);
+      content: '';
+    }
+    &.registration:before{
+      background-position: 0px -183px;
+    }
+    &.leaflet:before{
+      background-position: -67px -183px;
+    }
+    &.sds:before{
+      background-position: -135px -183px;
+    }
+    &.pds:before{
+      background-position: -204px -183px;
+    }
+    .title{
+      margin-left: 70px;
+    }
+    .description{
+      margin-left: 70px;
+      margin-top: 30px;
+      color: #f0332c;
+      span{
+        color: #a7a9ac;
+      }
     }
   }
 }
