--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -114,6 +114,10 @@ header{
             transition: 0.3s cubic-bezier(0.175, 0.885, 0.320, 1) opacity, 0.3s cubic-bezier(0.175, 0.885, 0.320, 1) color;
           }
         }
+        &:before{
+          content: none;
+          display: none;
+        }
         .caret{
           position: relative;
           border: none;
